Change config path

--- a/Synergy.conf
+++ b/Synergy.conf
@@ -3,7 +3,7 @@ activationHasRun=false
 autoConfig=false
 autoConfigServer=
 autoHide=false
-configFile=/home/petrosath/dotfiles/synergy/synergy.sgc
+configFile=/home/petrosath/.config/synergy/synergy.sgc
 cryptoEnabled=false
 edition=3
 elevateMode=false
