--- a/Synergy.conf
+++ b/Synergy.conf
@@ -3,7 +3,7 @@ activationHasRun=false
 autoConfig=false
 autoConfigServer=
 autoHide=false
-configFile=/home/petrosath/.config/synergy/synergy.sgc
+configFile=/home/petrosath/.config/Synergy/synergy.sgc
 cryptoEnabled=false
 edition=3
 elevateMode=false
@@ -11,6 +11,7 @@ elevateModeEnum=0
 groupClientChecked=false
 groupServerChecked=true
 interface=
+invertScrollDirection=false
 language=en
 languageSync=false
 lastExpiringWarningTime=0
